# woodpecker

./: .gitignore
gnu_project/: acl_cal  acl_cal.cpp  adxl345-3  adxl345.cpp  adxl345_120251224_222222.csv  adxl345_1_20251224_222414.csv  adxl345_20251230_091632.csv  adxl345_20251230_092213.csv  adxl345_20251230_093002.csv  adxl345_20251230_093314.csv  adxl345_20251230_095537.csv  adxl345_20251230_105758.csv  adxl345_20251230_110035.csv  adxl345_20251230_110229.csv  alc  etgnuplot.cpp  main1.cpp  main2.cpp  main3.cpp  nebula.cpp  nebula.hpp  oscilloscope  oscilloscope.cpp  rpi5gpiomgr.h  supernova  supernova.cpp
qt_project/: Aurora.cpp  Aurora.h  CMakeLists.txt  QPushButton.cpp  adxl345.h  coral.cpp  coral.h  enthalpy.cpp  etgnuplot.hpp  main.cpp  main3d.cpp  mainwindow.cpp  mainwindow.h  qtgui.cpp  reactant.cpp  reactant.h  rpi5gpiomgr.cpp  tower.cpp
